Implement `getSpot` endpoint
